# code_testing

./: README.md
cbds-release-management/: README.md
cbds-release-management/backend/: .env.example  pip.conf.example  pip.ini.example  pyproject.toml  requirements.txt
cbds-release-management/backend/app/: db.py  main.py
cbds-release-management/backend/app/core/: config.py  cors.py
cbds-release-management/backend/app/models/: __init__.py  connector.py  deploy_request.py
cbds-release-management/backend/app/routers/: connectors.py  deploys.py  jenkins.py  jfrog.py  servicenow.py
cbds-release-management/backend/app/schemas/: connectors.py  deploys.py  integrations.py
cbds-release-management/backend/app/services/: connector_service.py  jenkins_client.py  jfrog_client.py  servicenow_client.py
cbds-release-management/docs/: architecture-diagrams.md
cbds-release-management/frontend/: .npmrc.example  angular.json  package.json  tsconfig.json
cbds-release-management/frontend/src/: index.html  main.ts  styles.scss
cbds-release-management/frontend/src/app/: app.component.html  app.component.scss  app.component.ts
cbds-release-management/frontend/src/app/core/models/: connector.models.ts  deploy.models.ts  integration.models.ts
cbds-release-management/frontend/src/app/core/services/: api.service.ts  connector.service.ts  deploy.service.ts  jfrog.service.ts  servicenow.service.ts
cbds-release-management/frontend/src/environments/: environment.ts
jenkins/: connection_bear.py  test_1.py
